--- a/server/package.json
+++ b/server/package.json
@@ -1,15 +1,19 @@
 {
-  "name": "server",
+  "name": "bcaa-cookbook-server",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server",
+    "dev": "nodemon server"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.0",
+    "express": "^4.18.0"
+  },
+  "devDependencies": {
     "nodemon": "^2.0.15"
   }
 }
